@@ -4,16 +4,17 @@
  * PatientImpl, DoctorImpl, ClinicImpl,
  * AppointmentImpl, FeedbackImpl, SpecializationImpl,
  * TimeslotImpl, VitalsImpl
- * </p>
  * <p>
  * Copyright 2022 - Ideas2it
  */
 package com.ideas2it.healthcare.service.impl;
 
 import com.ideas2it.healthcare.common.Constants;
+import com.ideas2it.healthcare.common.ErrorConstants;
 import com.ideas2it.healthcare.common.MessageConstants;
 import com.ideas2it.healthcare.dto.TimeslotDto;
 import com.ideas2it.healthcare.exception.NotFoundException;
+import com.ideas2it.healthcare.exception.SqlException;
 import com.ideas2it.healthcare.mapper.TimeslotMapper;
 import com.ideas2it.healthcare.model.Timeslot;
 import com.ideas2it.healthcare.repository.TimeslotRepository;
@@ -21,7 +22,8 @@ import com.ideas2it.healthcare.service.TimeslotService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
-
+import java.time.LocalTime;
+import java.sql.SQLException;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -45,27 +47,56 @@ public class TimeslotServiceImpl implements TimeslotService {
      * {@inheritDoc}
      */
     public TimeslotDto addTimeslot(TimeslotDto timeslotDto) {
-        return TimeslotMapper.toDto(timeslotRepository
-                .save(TimeslotMapper.fromDto(timeslotDto)));
+        if (!isValidTimeslot(timeslotDto)) {
+            throw new NotFoundException(ErrorConstants.TIMESLOT_ALREADY_EXISTS);
+        }
+        try {
+            return TimeslotMapper.toDto(timeslotRepository
+                    .save(TimeslotMapper.fromDto(timeslotDto)));
+        } catch (Exception exception) {
+            throw new SqlException(exception.getMessage());
+        }
     }
 
     /**
      * {@inheritDoc}
      */
     public List<TimeslotDto> getTimeslots(Integer pageNumber, Integer totalRows) {
-        List<Timeslot> timeslots = timeslotRepository
-                .findAll(PageRequest.of(pageNumber, totalRows)).toList();
-        if (timeslots.isEmpty()) {
-            throw new NotFoundException(MessageConstants.TIMESLOT_IS_EMPTY);
+        try {
+            List<Timeslot> timeslots = timeslotRepository
+                    .findAll(PageRequest.of(pageNumber, totalRows)).toList();
+            if (timeslots.isEmpty()) {
+                throw new NotFoundException(MessageConstants.TIMESLOT_IS_EMPTY);
+            }
+            return timeslots.stream().map(TimeslotMapper::toDto)
+                    .collect(Collectors.toList());
+        } catch (SqlException    exception) {
+            throw new SqlException(exception.getMessage());
         }
-        return timeslots.stream().map(TimeslotMapper::toDto)
-                .collect(Collectors.toList());
     }
 
     /**
      * {@inheritDoc}
      */
     public Integer countOfTimeslots() {
-        return (int) timeslotRepository.count();
+        try {
+            return (int) timeslotRepository.count();
+        } catch (SqlException exception) {
+            throw new SqlException(exception.getMessage());
+        }
+    }
+
+    private Boolean isValidTimeslot(TimeslotDto timeslotDto) {
+        if (12 < timeslotDto.getTimeslot().getHour()) {
+            throw new NotFoundException(ErrorConstants.INVALID_TIMESLOT);
+        }
+        List<Timeslot> timeslots = timeslotRepository.findAll();
+        for (Timeslot timeslot: timeslots) {
+            if (timeslot.getTimeslot() == timeslotDto.getTimeslot() &&
+                    timeslot.getTimeFormat().equals(timeslotDto.getTimeFormat())) {
+                return false;
+            }
+        }
+        return true;
     }
 }
